tao moi them 1 cai nav nha

--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
             </div>
         </div>
     </nav> -->
+    <nav>
+        Đinh Tri Thức
+    </nav>
     <!-- CAROUSEL -->
     <section class="carousel">
         <div class="carousel__content">
