thay doi cuoi cung

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <body>
     <!-- NAV -->
-    <!-- <nav class="navbar navbar-expand-md navbar-light">
+    <nav class="navbar navbar-expand-md navbar-light">
         <div class="container-fluid">
             <a class="navbar-brand navbar__logo" href="#">BAKE</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -58,10 +58,8 @@
                 </ul>
             </div>
         </div>
-    </nav> -->
-    <nav>
-        Đinh Tri Thức 234
     </nav>
+   
 
     <section class="carousel">
         <div class="carousel__content">
